still fixing widths ofcookies on mobile

--- a/CSS/typography.css
+++ b/CSS/typography.css
@@ -167,7 +167,7 @@
 @media (max-width: 991.98px) {
   .policy-title {
     flex: 1 1 auto; 
-    max-width: none;
+    max-width: calc(100vh - 2rem); 
     min-width: 250px;
     height: auto; /* fit-content behavior when stacked */
     border-top-left-radius: var(--border-radius-xsm);
@@ -177,7 +177,26 @@
   }
   .policy-text {
   flex: 1 1 auto; 
-  max-width: none;        /* optional minimum to avoid collapse */
+  max-width: calc(100vh - 2rem);        /* optional minimum to avoid collapse */
+  min-width: 250px;
+  height: 30rem;
+}
+}
+
+@media screen and (max-width: 767.98px) { 
+  .policy-title {
+    flex: 1 1 auto; 
+    max-width: calc(100vh - 2rem); 
+    min-width: 250px;
+    height: auto; /* fit-content behavior when stacked */
+    border-top-left-radius: var(--border-radius-xsm);
+    border-top-right-radius: var(--border-radius-xsm);
+    border-bottom-left-radius: 0%;
+    border-bottom-right-radius: 0%;
+  }
+  .policy-text {
+  flex: 1 1 auto; 
+  max-width: calc(100vh - 2rem);       /* optional minimum to avoid collapse */
   min-width: 250px;
   height: 30rem;
 }
